<resources>
    <string name="app_name">VuInfo</string>
    <string name="action_settings">Settings</string>
    <string name="button_lokacija">Moja \n lokacija</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="normal">Normal</string>
    <string name="sattelite">Satellite</string>
    <string name="none">None</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="current_location">Trenutna lokacija</string>
    <string name="action_search">Traži</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Pomoć</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_section">Section</string>
    <string name="drawer_label">Label</string>
    <string name="title_activity_countries">Countries</string>
    <string name="title_activity_country">Country</string>
    <string name="title_activity_eu_countries">EuCountriesActivity</string>
    <string name="title_activity_eu_country">EuCountryActivity</string>
    <string name="title_activity_dblist">DBListActivity</string>
    <string name="title_activity_dbedit">DBEditActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_quiz_result">QuizResultActivity</string>
    <string name="sports">Sport</string>
    <string name="football_name">Nogomet</string>
    <string name="basketball_name">Košarka</string>
    <string name="volleyball_name">Odbojka</string>
    <string name="handball_name">Rukomet</string>
    <string name="tennis_name">Tenis</string>
    <string name="combat_sports_name">Borilački sportovi</string>
    <string name="chess_name">Šah</string>
    <string name="bocce_name">Boćanje</string>
    <string name="other_sports_name">Ostali sportovi</string>
    <string name="fitness_name">Fitnes klubovi</string>
    <string name="sports_association_name">Sportske udruge</string>
    <string name="maps_name">Mape</string>
    <string name="sports_row_textview">Sports row</string>
    <string name="action_bar_sports">Sport</string>
    <string name="all_sports_name_textview">Name club</string>
    <string name="all_sports_phone_textview">Phone club</string>
    <string name="all_sports_mail_textview">Mail club</string>
    <string name="all_sports_address_textview">Address club</string>
    <string name="hotels_name">Smještaj</string>
    <string name="gas_station_name">Benzinske postaje</string>
    <string name="drugstore_name">Ljekarne</string>
    <string name="restaurant_name">Restorani</string>
    <string name="number_firefighters">193</string>
    <string name="number_police">192</string>
    <string name="number_ambulance">194</string>
    <string name="number_city_vukovar">032/456501</string>
    <string name="number_museum">032/441271</string>
    <string name="number_library">032/450357</string>
    <string name="number_hr_dom">032/450697</string>
    <string name="number_tourist">032/442889</string>
    <string name="number_bus">032/337799</string>
    <string name="number_train">032/430340</string>
    <string name="firefighters_name">Vatrogasci</string>
    <string name="police_name">Policija</string>
    <string name="ambulance_name">Hitna</string>
    <string name="city_vukovar_name">Grad Vukovar</string>
    <string name="museum_name">Gradski muzej</string>
    <string name="library_name">Gradska knjižnica</string>
    <string name="hr_dom_name">Hrvatski dom</string>
    <string name="tourist_name">Turistička zajednica</string>
    <string name="bus_name">Autobusni kolodvor</string>
    <string name="train_name">Željeznički kolodvor</string>
    <string name="events_title">Saznajte najvažnija događanja u gradu Vukovaru</string>
    <string name="web_page_name">Web stranica</string>
    <string name="introduction">Uvod
				 \n\n
				Vukovar je grad i najveća hrvatska riječna luka na Dunavu, u hrvatskom dijelu Srijema.
				 On je i upravno, prosvjetno, gospodarsko i kulturno središte Vukovarsko-srijemske županije. 
				 Vukovar je stari barokni grad, poznat po Domovinskom ratu i strašnim razaranjima. 
				 Među mnoštvom vrlo atraktivnih, ali u ratu teško stradalih građevina, ističu se dvorac Eltz iz XVIII st., 
				 barokne zgrade u središtu grada, franjevački samostan, župna crkva sv.Filipa i Jakova, pravoslavna crkva sv. Nikolaja i dr. 
				 Izvan grada na obali Dunava prema Iloku nalazi se Vučedol, bogato arheološko nalazište. 
				 Obredna posudica Vučedolska golubica smatra se svojevrsnim simbolom grada. 
				 Vučedol je i poznato izletište, raj za ribiče s prekrasnom pješčanom plažom na Orlovu otoku.</string>
    <string name="position_village">        		 Položaj
        		 \n\n     
		        Atraktivno ušće rijeke Vuke u Dunav, šetališta uz Dunav i uređene plaže osiguravaju športsko-rekreacijske aktivnosti tijekom cijele godine, 
		        a posebice u toplom dijelu godine kada je moguće kupanje. 
		        Na Dunavu i Vuki popularan je ribolov (som, smuđ, šaran, štuka, kečiga).
				\n
				U sklopu grada Vukovara nalaze se naselja: 
				Trpinjska cesta,
				Borovo Naselje, 
				Mitnica, 
				Petrova gora, 
				Sajmište, 
				Supodernica,
				Lužac, 
				Centar (stara jezgra grada). 
				Pod upravom grada Vukovara se nalaze i sela: 
				Lipovača, Sotin i Jakobovac(naselju pripada Ovčara).   </string>
    <string name="population">        	Prema narodnosti, većina stanovnika su Hrvati, slijede ih Srbi, Rusini, te Mađari.
			Od nacionalnih manjina u Vukovaru još ima Nijemaca, Austrijanaca, Ukrajinaca, Slovaka, Crnogoraca, Albanaca itd.
			\n\n
			Hrvati
			\n\n
			Naseljavanje Hrvata u Podunavlju na današnjem vukovarskom području uslijedilo je krajem 6. i početkom 7. stoljeća, 
			kada su Hrvati došli i na ostala hrvatska područja. 
			Trinaest stoljetna naseljenost Hrvata dozvoljava da o njima govorimo kao o starosjediocima na ovom području. 
			Za vrijeme hrvatskih narodnih vladara u 10. i 11. stoljeću već su svi hrvatski krajevi od Drave i Dunava na sjeveru do Jadranskog mora na jugu ujedinjeni u jedinstvenoj hrvatskoj kraljevini. 
			Hrvatsko stanovništvo na vukovarskom području pretrpjelo je najveće gubitke za vrijeme turske vladavine (1526.-1687. godine), ali se uspjelo održati.
			\n\n
			Srbi
			\n\n
			Prvo naseljavanje stanovnika pravoslavne vjere na vukovarskom području uslijedilo je u 16. stoljeću. 
			Pravoslavni Vlasi, kao pomoćne turske čete (martolozi) naseljavaju se u manjim skupinama. 
			Poslije oslobođenja od turske vlasti krajem 17. i početkom 18. stoljeća nekoliko stotina srpskih porodica naseljava se u opustjelim selima i nešto u Vukovaru. 
			Tada je nastala srpska enklava od desetak sela na vukovarskom području i održala se kao relativno zatvorena cjelina. 
			U novijem razdoblju smišljeno naseljavanje Srba u Vukovar uslijedilo je za vrijeme postojanja jugoslavenskih država dijeljenjem obradivih površina i zapošljavanjem. 
			Najveći priljev Srba u Vukovaru uslijedio je poslije 1945. godine i odlaska Nijemaca.
			\n\n
			Nijemci
			\n\n
			Austrijski carevi poticali su naseljavanje novih stanovnika na opustjela područja poslije turske vladavine, da bi dobili radnu snagu. 
			Već početkom 18. stoljeća u Novom Vukovaru naselili su se njemački obrtnici. 
			Tijekom 18. i 19. stoljeća naseljava se znatniji broj Nijemaca na vukovarskom području. 
			Mnogi koji su se ranije naselili u Bačkoj sada prelaze Dunav, jer se oko Vukovara mogla dobiti jeftina zemlja. 
			Tako u nekim selima kao npr. Sotinu Nijemci čine polovicu stanovništva. 
			Tijekom i krajem II. svjetskog rata 1944/45. godine i Nijemci teško stradavaju i u Vukovaru ih ostaje neznatan broj.  		        </string>
</resources>